# TaoTCM-Hermes-SkillBank

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: cds_profiles.yaml  entity_aliases.yaml  evidence_levels.yaml  export_targets.yaml  genre_router.yaml  models.yaml  patient_safety_lexicon.yaml  pipeline.yaml  risk_tiers.yaml  tcm_lexicon.yaml
docs/: METHODS.md  genre_guideline_v1.0.md
prompts/: _annotate_common.md  aggregate_patterns.md  annotate_case.md  annotate_clause.md  annotate_commentary.md  annotate_formula.md  annotate_herb.md  annotate_mnemonic.md  annotate_pulse.md  annotate_treatise.md  build_context_state.md  generate_skill.md  genre_router.md
schemas/: case_template.schema.json  clause_template.schema.json  commentary_template.schema.json  common.schema.json  formula_template.schema.json  genre_segmentation.schema.json  herb_template.schema.json  mnemonic_template.schema.json  patient_intake_response.schema.json  pulse_template.schema.json  treatise_claim.schema.json
tests/: conftest.py  test_adversarial_review_fixes.py  test_agent_loop.py  test_baseline_adapters.py  test_citation_validator.py  test_counterfactual.py  test_cross_genre_validation.py  test_dotenv.py  test_entity_and_governance.py  test_exporters.py  test_genre_router.py  test_governance.py  test_inference_engine.py  test_llm_client.py  test_p0_review_fixes.py  test_patient_lexicon.py  test_pipeline_validation.py  test_protocol_assessment.py  test_publication_grade_eval.py  test_review_round2_fixes.py  test_risk_tiering.py  test_run_diff.py  (+2 more)
(+77 files in other folders)
